--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -64,26 +64,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "resultados_bruto"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -104,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +93,7 @@
        "'2023/1'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,12 +113,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "client = db.MongoClient(\"mongodb+srv://dsrodrigovieira:sfFD7Ewc4SL9QVRs@dev-saturn-analytics-az.9ajrp.mongodb.net/?retryWrites=true&w=majority&appName=dev-saturn-analytics-azure\")\n",
-    "database = client.get_database(\"saturnDB\")\n",
+    "database = client.get_database(\"saturnDBdev\")\n",
     "collection = database.get_collection(\"kpi_results\")\n",
     "results = collection.find({\"organization_cnes\": 9876543, \"year\": year, \"month\": month})\n",
     "try:\n",
@@ -150,42 +130,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "type(ano_mes)"
+    "a = {}\n",
+    "if not last_month:\n",
+    "    a['0'] = None\n",
+    "else:\n",
+    "    for i in last_month.keys():\n",
+    "        a[i] = last_month[i]['valor']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True, 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataframe = pd.read_csv(\"dados_hospitalares_completos.csv\")\n",
+    "\n",
+    "if not dataframe.empty:\n",
+    "    query = dataframe.to_dict(orient='records')\n",
+    "    try:\n",
+    "        #cursor = db.MongoClient(self.string_conexao)\n",
+    "        cursor = db.MongoClient(\"mongodb+srv://dsrodrigovieira:sfFD7Ewc4SL9QVRs@dev-saturn-analytics-az.9ajrp.mongodb.net\")\n",
+    "        banco = cursor.get_database(\"saturnDBdev\")\n",
+    "        colecao = banco.get_collection(\"metricas\")\n",
+    "        if len(query) == 1:\n",
+    "            dados_inseridos = colecao.insert_one(query)\n",
+    "            numero_registros = len(dados_inseridos.inserted_id)\n",
+    "        else:\n",
+    "            dados_inseridos = colecao.insert_many(query)\n",
+    "            numero_registros = len(dados_inseridos.inserted_ids)        \n",
+    "        cursor.close()\n",
+    "        print(f\"{dados_inseridos.acknowledged}, {str(numero_registros)}\")\n",
+    "    except ConnectionError as e:\n",
+    "        print(f\"Não foi possível salvar os dados devido erro interno do servidor: {e}\")        \n",
+    "else:\n",
+    "    print(\"Dados inválidos\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'value': 43.05555555555556, 'variation': 'c', 'estratification': []}"
+       "True"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ano_mes"
+    "dados_inseridos.acknowledged"
    ]
   }
  ],
