--- a/test/notebook.ipynb
+++ b/test/notebook.ipynb
@@ -12,12 +12,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "MONGO_URI = \"mongodb+srv://dsrodrigovieira:sfFD7Ewc4SL9QVRs@dev-saturn-analytics-az.9ajrp.mongodb.net/?retryWrites=true&w=majority&appName=dev-saturn-analytics-azure\"\n",
-    "DATABASE = \"saturnDBdev\"\n",
+    "DATABASE = \"saturnDBdev\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = {\"cd_cnes\": 9876543, \"ano\": ano}\n",
+    "campos = {\"ano\": 1, \"mes\": 1, \"_id\": 0}\n",
+    "try:\n",
+    "    cursor = db.MongoClient(MONGO_URI)\n",
+    "    banco = cursor.get_database(DATABASE)\n",
+    "    colecao_resultados = banco.get_collection(\"resultados_kpis\")\n",
+    "    resultados = colecao_resultados.find(query, campos)\n",
+    "    lista_resultados = list(resultados)\n",
+    "    cursor.close()\n",
+    "except Exception as e:\n",
+    "    raise Exception(\"Não foi possível recuperar o documento devido ao seguinte erro: \", e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "def busca_resumo(cd_cnes: int, ano: int):\n",
     "    \"\"\"\n",
@@ -244,121 +272,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['index', 'variacao']"
-      ]
-     },
-     "execution_count": 284,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(aux[0].keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 309,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 309,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len([])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 287,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'index': 'rkpi_1', 'variacao': 0}\n",
-      "{'index': 'rkpi_2', 'variacao': 0}\n",
-      "{'index': 'rkpi_3', 'variacao': 1}\n",
-      "{'index': 'rkpi_4', 'variacao': 0}\n",
-      "{'index': 'rkpi_5', 'variacao': 0}\n",
-      "{'index': 'rkpi_6', 'variacao': 0}\n",
-      "{'index': 'rkpi_7', 'variacao': 0}\n",
-      "{'index': 'rkpi_8', 'variacao': 0}\n",
-      "{'index': 'rkpi_9', 'variacao': 0}\n",
-      "{'index': 'rkpi_10', 'variacao': 0}\n",
-      "{'index': 'rkpi_11', 'variacao': 0}\n",
-      "{'index': 'rkpi_12', 'variacao': 0}\n",
-      "{'index': 'rkpi_13', 'variacao': 0}\n",
-      "{'index': 'rkpi_14', 'variacao': 0}\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in aux:\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 313,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 313,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "h = [True,False]\n",
-    "any(i == True for i in h)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 304,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 304,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "g = []\n",
-    "for i in aux:\n",
-    "    g.extend(list(i.keys()))\n",
-    "all(chave in pd.Series(g).unique() for chave in ['inex', 'variacao'])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 275,
    "metadata": {},
    "outputs": [
@@ -393,26 +306,6 @@
     "\n",
     "print(f\"Registros encontrados: {founds}\")\n",
     "print(f\"Registros atualizados: {updates}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 237,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 1]"
-      ]
-     },
-     "execution_count": 237,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "resultados"
    ]
   }
  ],
